# liboffsetfinder64

./: .gitignore  CMakeLists.txt  build.sh
.github/workflows/: ci.yml  linux-bootstrap.sh  linux-build.sh  linux-post.sh  mac-bootstrap.sh  mac-build.sh  mac-post.sh
include/liboffsetfinder64/: ibootpatchfinder64.hpp  ibootpatchfinder64_base.hpp  ibootpatchfinder64_iOS14.hpp
liboffsetfinder64/: ibootpatchfinder64.cpp  ibootpatchfinder64_base.cpp  ibootpatchfinder64_iOS14.cpp
pkgconfig/: liboffsetfinder64.pc.in
src/: ibootpatchfinder64.cpp  ibootpatchfinder64_base.cpp  ibootpatchfinder64_iOS14.cpp  patchfinder64.cpp
